--- a/index.html
+++ b/index.html
@@ -2,75 +2,27 @@
 <html>
 <head>
 <title>Dunder Mifflin</title>
-<style>
 
-body {
-    margin:0;
-    padding:0;
-    background:#1F618D;
-}
+<link href = "StyleSheet.css" rel = "stylesheet">
 
-nav {
-    width:100%;
-    background:black;
-    overflow:auto;
-}
-
-ul {
-    padding:0;
-    margin: 0 0 0 150px;
-    list-style:none;
-}
-
-li {
-    float:left;
-}
-.logo img{
-
-   position:absolute;
-   margin-top:15px;
-   margin-left:10px;
-}
-
-.cart img{
-   position:absolute;
-   margin-top:15px;
-   margin-left:1250px;
-}
-
-
-nav a{
-   width:200px;
-   display:block;
-   padding:30px 15px;
-   text-decoration:none;
-   font-family:Arial;
-   color:white;
-   text-align:center;
-}
-
-nav a:hover {
-    background:#1F618D;
-    transition: 0.5s;
-    text-transform:uppercase;
-}
-
-</style>
 </head>
 
 <body>
-<div class="logo"><a href="#"><img src="Images/Dunder_Mifflin_logo.png" width="100" height="40"></a>
-</div>
-<nav>
-    <ul>
-	<li><a href="index.html"> HOME</a></li>
-	<li><a href="products.html"> PAPER</a></li>
-	<li><a href="about.html"> ABOUT</a></li>
-	<li><a href="FAQ.html"> FAQ</a></li>
-	
-    </ul>
-</nav>
+<header>
+   <div class="logo"><a href="#"><img 
+	src="Images/Dunder_Mifflin_logo.png" width="100" 
+	height="40"></a>
+   </div>
+   <nav>
+    	<ul id = "navUl">
+	   <li id = "navLi"><a href="index.html"> HOME</a></li>
+	   <li id = "navLi"><a href="products.html"> PAPER</a></li>
+	   <li id = "navLi"><a href="about.html"> ABOUT</a></li>
+	   <li id = "navLi"><a href="FAQ.html"> FAQ</a></li>
 
+   	</ul>
+   </nav>
+</header>
 
 
 <img src="Images/Header_Image.png" width="100%">
