--- a/index.html
+++ b/index.html
@@ -8,25 +8,33 @@
 </head>
 
 <body>
-<header>
-   <div class="logo"><a href="#"><img 
-	src="Images/Dunder_Mifflin_logo.png" width="100" 
-	height="40"></a>
-   </div>
-   <nav>
-    	<ul id = "navUl">
-	   <li id = "navLi"><a href="index.html"> HOME</a></li>
-	   <li id = "navLi"><a href="products.html"> PAPER</a></li>
-	   <li id = "navLi"><a href="about.html"> ABOUT</a></li>
-	   <li id = "navLi"><a href="FAQ.html"> FAQ</a></li>
+<header class = "header">
+   <nav class = "nav">
+    	<ul class = "navUl">
+	   <li class = "logo"><a href="index.html"><img 
+		src="Images/Dunder_Mifflin_logo.png" width="100" 
+		height="40"></a>
+	   </li>
+	   <li class = "navLi"><a href="index.html"> HOME</a></li>
+	   <li class = "navLi"><a href="products.html"> PAPER</a></li>
+	   <li class = "navLi"><a href="about.html"> ABOUT</a></li>
+	   <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
 
    	</ul>
    </nav>
 </header>
 
-
 <img src="Images/Header_Image.png" width="100%">
 
+<p>
+	<br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br>
+
+</p>
 </body>
 
 
@@ -34,27 +42,6 @@
 
 
 <footer class="footer">
-   <div class="footer-left">
-       <img src="Images/Dunder_Mifflin_logo.png" width="100" length="100" alt="">
-       <br></br>
-       <p><font color="white" face="Arial" size="1">Dunder Mifflin provides America's most trusted paper since 1986, specializing in standard print and colored papers, as well as specialty printers and office supplies.</font></p>
-   </div>
-
-
-
-<div class="footer-right">
-
-<font color="white" face = "Arial"><table width = "1000" bgcolor= "#1F618D"> 
-<th  width = "10%"><a href = "index.html"><b>HOME
-</b></a></th>
-<th width = "10%"><a href = "products.html"><b>PAPER
-</b></a></th>
-<th width = "10%"><a href = "about.html"><b>ABOUT
-</b></a></th>
-<th width = "10%"><a href = "FAQ.html"><b>FAQ
-</b></a></th>
-
-</div>
 
 </footer>
 
